//  BearAnimetorParameters.cs

using System.Collections.Generic;
using UnityEngine;

namespace GoToYou.Detail.GameStage.Saboteur
{
    /// <summary>
    /// 
    /// AnimetorParameters
    /// </summary>
    public static class BearAnimatorParameters
    {
        public const string Idle = "Idle";
        public const string Walk = "Walk";
        public const string Attack = "Attack";
        public const string Eat = "Eat";
    }
}